--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,15 @@
   <button mat-raised-button [routerLink]="'/primitive-types'">
     Premitive Types
   </button>
+  <button mat-raised-button [routerLink]="'/object-type'">
+    Object Type
+  </button>  
   <span class="spacer"></span>
-  <button mat-icon-button>
+  <button
+    mat-icon-button
+    href="https://github.com/sravimohan/angular-signal-examples"
+    target="_blank"
+  >
     <svg
       _ngcontent-ng-c1282639057=""
       viewBox="0 0 20 20"
