--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,29 +3,10 @@
   <button mat-raised-button [routerLink]="'/primitive-types'">
     Premitive Types
   </button>
-  <button mat-raised-button [routerLink]="'/object-type'">
-    Object Type
-  </button>  
+  <button mat-raised-button [routerLink]="'/object-type'">Object Type</button>
+  <button mat-raised-button [routerLink]="'/model-input'">Model Input</button>
   <span class="spacer"></span>
-  <button
-    mat-icon-button
-    href="https://github.com/sravimohan/angular-signal-examples"
-    target="_blank"
-  >
-    <svg
-      _ngcontent-ng-c1282639057=""
-      viewBox="0 0 20 20"
-      aria-hidden="true"
-      class="github-logo ng-star-inserted"
-    >
-      <path
-        _ngcontent-ng-c1282639057=""
-        d="M10 0C4.477 0 0 4.477 0 10c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V19c0 .27.16.59.67.5C17.14 18.16 20 14.42 20 10A10 10 0 0 0 10 0z"
-        fill="currentColor"
-        fill-rule="evenodd"
-      ></path>
-    </svg>
-  </button>
+  <github-link />
 </mat-toolbar>
 <div class="container">
   <router-outlet />
