--- a/src/app/primitive-types/primitive-types.component.html
+++ b/src/app/primitive-types/primitive-types.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>Primitive Types</mat-card-title>
+    <github-link path="tree/main/src/app/primitive-types" />
   </mat-card-header>
   <mat-divider></mat-divider>
   <mat-card-content>
