--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,19 @@
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+mat-divider {
+  margin: 16px 0 !important;
+}
+
+.mat-mdc-card-header-text {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
