--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,3 +14,6 @@
   --mdc-elevated-card-container-color: #fff;
 }
 
+.is-active {
+  border: 1px solid var(--mdc-protected-button-label-text-color);
+}
