--- a/src/app/object-type/object-type.component.html
+++ b/src/app/object-type/object-type.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>Object Type</mat-card-title>
+    <github-link path="tree/main/src/app/object-type" />
   </mat-card-header>
   <mat-divider></mat-divider>
   <mat-card-content>
