--- a/src/app/model-input/model-input.component.html
+++ b/src/app/model-input/model-input.component.html
@@ -1,1 +1,21 @@
-<p>model-input works!</p>
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>Model Type</mat-card-title>
+      <github-link path="tree/main/src/app/object-type" />
+    </mat-card-header>
+    <mat-divider></mat-divider>
+    <mat-card-content>
+      <p class="mat-title-medium">Signal :</p>
+      <pre>{{ author() | json }}</pre>
+  
+      <p class="mat-title-medium">Computed :</p>
+      <pre>{{ message() | json }}</pre>
+  
+      <mat-card-actions>
+        <button mat-raised-button color="primary" (click)="addBook()">
+          Add Book
+        </button>
+      </mat-card-actions>
+    </mat-card-content>
+  </mat-card>
+  
