--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,14 @@
   <a mat-raised-button routerLink="/object-type" routerLinkActive="is-active">
     Object Type
   </a>
-  <a mat-raised-button routerLink="/model-input" routerLinkActive="is-active">
-    Model Input
+  <a mat-raised-button routerLink="/with-input" routerLinkActive="is-active">
+    Input
+  </a>  
+  <a mat-raised-button routerLink="/with-model" routerLinkActive="is-active">
+    Model
   </a>
   <span class="spacer"></span>
-  <github-link />
+  <app-github-link />
 </mat-toolbar>
 <div class="container">
   <router-outlet />
